maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:3: error: not found: value Sortie
  Sortie=getSortie()
  ^ShortestPathMaze:25: error: value &&! is not a member of Boolean
        if((!aMurNord(xi,yi)&&!aMurOuest(x,y))||(!aMurNord(xi-1,yi)&&!aMurOuest(xi-1,yi))){
                            ^ShortestPathMaze:25: error: value &&! is not a member of Boolean
        if((!aMurNord(xi,yi)&&!aMurOuest(x,y))||(!aMurNord(xi-1,yi)&&!aMurOuest(xi-1,yi))){
                                                                   ^ShortestPathMaze:35: error: value &&! is not a member of Boolean
        if((!aMurNord(xi,yi)&&!aMurOuest(xi,y))||(!aMurNord(xi+1,yi)&&!aMurOuest(xi,yi))){
                            ^ShortestPathMaze:35: error: value &&! is not a member of Boolean
        if((!aMurNord(xi,yi)&&!aMurOuest(xi,y))||(!aMurNord(xi+1,yi)&&!aMurOuest(xi,yi))){
                                                                    ^ShortestPathMaze:50: error: value &&! is not a member of Boolean
        if((!aMurNord(x,y)&&!aMurOuest(x,yi))||(!aMurOuest(x,y)&&!aMurNord(xi,y))){
                          ^ShortestPathMaze:50: error: value &&! is not a member of Boolean
        if((!aMurNord(x,y)&&!aMurOuest(x,yi))||(!aMurOuest(x,y)&&!aMurNord(xi,y))){
                                                               ^ShortestPathMaze:54: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
      if(x==xi && y=yi+1){
               ^ShortestPathMaze:60: error: value &&! is not a member of Boolean
        if((!aMurNord(x,y)&&!aMurOuest(xi,yi))||(!aMurOuest(x-1,y)&&!aMurNord(x-1,y))){
                          ^ShortestPathMaze:60: error: value &&! is not a member of Boolean
        if((!aMurNord(x,y)&&!aMurOuest(xi,yi))||(!aMurOuest(x-1,y)&&!aMurNord(x-1,y))){
                                                                  ^